# oomphlib_user_drivers

./: .gitignore  rayheader.h
lagrange_bifurcation/: .gitignore  Makefile.am  loop_amg.sh  plot_it.bash  run.sh  testrun.sh  unstructured_three_d_fluid.cc  unstructured_three_d_fluid_brick.cc  unstructured_three_d_fluid_change_to_brick.cc  unstructured_three_d_fluid_tet.cc
lagrange_bifurcation/Validation_bk/: OUTPUT
lagrange_bifurcation/Validation_bk/RESLT_TH/: fluid_soln1.vtu  fluid_soln2.vtu
lagrange_bifurcation/scripts_and_data/: loop_hex_exact_exactlsc_ntstep4.sh  loop_hex_exact_exactlsc_ntstep40.sh  loop_tet_exact_ntstep4.sh  loop_tet_exact_ntstep40.sh  loop_tet_exactlsc_ntstep4.sh  loop_tet_exactlsc_ntstep40.sh
lagrange_bifurcation/tetgen_files_old/: flow_with_stream_ribbons.lay
lagrange_cube/: Makefile.am  cube_lgr.cc  run_test.sh
lagrange_sqcurve/: Makefile.am  loop_sqcurve_po.sh  loop_sqcurve_po_catres.sh  loop_sqcurve_po_dirichletside.sh  loop_sqcurve_po_dirichletside_catres.sh  loop_sqcurve_po_neumannside.sh  loop_sqcurve_van.sh  loop_sqcurve_van_catres.sh  milan_quarter_annulus.cc  milan_quarter_annulus_bk.cc  sq_curve.cc  sqcurve_po.cc  sqcurve_po_dirichletall.cc  sqcurve_po_dirichletside.cc  sqcurve_po_neumannside.cc  sqcurve_tf_po.cc  sqcurve_van.cc
lagrange_square/: .gitignore  Makefile.am  loop_sq_po.sh  loop_sq_po_catres.sh  loop_sq_tf_po.sh  loop_sq_van.sh  loop_sq_van_catres.sh  loop_sqvan_n256.sh  run_sq0.sh  run_sqpo.sh  run_sqvan.sh  sq_lgr.cc  sq_po.cc  sq_po_semipara.cc  sq_po_tf_semipara.cc  sq_tf.cc  sq_tf_po.cc  sq_tf_semipara.cc  sq_van.cc  sq_van_po_semipara.cc  square0.cc  validate.sh
lagrange_square/matlab/: load_matrices.m
lagrange_step/: generate_test_list_steppo.sh  generate_test_list_stepvan.sh  rayheader.h  run_steppo.sh  run_stepvan.sh  step_po.cc  step_van.cc
lagrange_step/runsStepPo/: .gitignore
